--- a/public/css/framework.css
+++ b/public/css/framework.css
@@ -1,7 +1,16 @@
 @charset "utf-8";
 
-html{overflow-y:scroll; overflow-x:hidden;}
-html, body{margin:0; padding:0; font-size:14px; line-height:1.6em;}
+html {
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+    text-align: center
+}
 
 *, *::before, *::after{box-sizing:border-box;}
 
