--- a/resources/css/framework.css
+++ b/resources/css/framework.css
@@ -9,8 +9,16 @@ Licence URI: https://www.os-templates.com/template-terms
 File: Framework CSS
 */
 
-html{overflow-y:scroll; overflow-x:hidden;}
-html, body{margin:0; padding:0; font-size:14px; line-height:1.6em;}
+html {
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+}
 
 *, *::before, *::after{box-sizing:border-box;}
 
@@ -107,7 +115,10 @@ address, article, aside, figcaption, figure, footer, header, main, nav, section{
 --------------------------------------------------------------------------------------------------------------- */
 .one_half, .one_third, .two_third, .one_quarter, .two_quarter, .three_quarter{display:inline-block; float:left; margin:0 0 0 4.21052%; list-style:none;}
 
-.first{margin-left:0; clear:left;}
+.first {
+    margin-left: 0;
+    clear: both;
+}
 
 .one_quarter{width:21.8421%;}
 .one_third{width:30.52631%;}
